; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/tools/perf/extr_perf.c_handle_options.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/tools/perf/extr_perf.c_handle_options.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cmd_struct = type { i8* }

@.str = private unnamed_addr constant [7 x i8] c"--help\00", align 1
@.str.1 = private unnamed_addr constant [10 x i8] c"--version\00", align 1
@CMD_EXEC_PATH = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [12 x i8] c"--html-path\00", align 1
@PERF_HTML_PATH = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [3 x i8] c"-p\00", align 1
@.str.4 = private unnamed_addr constant [11 x i8] c"--paginate\00", align 1
@use_pager = common dso_local global i32 0, align 4
@.str.5 = private unnamed_addr constant [11 x i8] c"--no-pager\00", align 1
@.str.6 = private unnamed_addr constant [11 x i8] c"--perf-dir\00", align 1
@stderr = common dso_local global i32 0, align 4
@.str.7 = private unnamed_addr constant [36 x i8] c"No directory given for --perf-dir.\0A\00", align 1
@perf_usage_string = common dso_local global i32 0, align 4
@PERF_DIR_ENVIRONMENT = common dso_local global i32 0, align 4
@CMD_PERF_DIR = common dso_local global i32 0, align 4
@.str.8 = private unnamed_addr constant [12 x i8] c"--work-tree\00", align 1
@.str.9 = private unnamed_addr constant [37 x i8] c"No directory given for --work-tree.\0A\00", align 1
@PERF_WORK_TREE_ENVIRONMENT = common dso_local global i32 0, align 4
@CMD_WORK_TREE = common dso_local global i32 0, align 4
@.str.10 = private unnamed_addr constant [14 x i8] c"--debugfs-dir\00", align 1
@.str.11 = private unnamed_addr constant [39 x i8] c"No directory given for --debugfs-dir.\0A\00", align 1
@CMD_DEBUGFS_DIR = common dso_local global i32 0, align 4
@.str.12 = private unnamed_addr constant [9 x i8] c"dir: %s\0A\00", align 1
@debugfs_mountpoint = common dso_local global i8* null, align 8
@.str.13 = private unnamed_addr constant [12 x i8] c"--list-cmds\00", align 1
@commands = common dso_local global %struct.cmd_struct* null, align 8
@.str.14 = private unnamed_addr constant [4 x i8] c"%s \00", align 1
@.str.15 = private unnamed_addr constant [20 x i8] c"Unknown option: %s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8***, i32*, i32*)* @handle_options to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @handle_options(i8*** %0, i32* %1, i32* %2) #0 {
  %4 = alloca i8***, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.cmd_struct*, align 8
  store i8*** %0, i8**** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  store i32 0, i32* %7, align 4
  br label %11

11:                                               ; preds = %277, %3
  %12 = load i32*, i32** %5, align 8
  %13 = load i32, i32* %12, align 4
  %14 = icmp sgt i32 %13, 0
  br i1 %14, label %15, label %286

15:                                               ; preds = %11
  %16 = load i8***, i8**** %4, align 8
  %17 = load i8**, i8*** %16, align 8
  %18 = getelementptr inbounds i8*, i8** %17, i64 0
  %19 = load i8*, i8** %18, align 8
  store i8* %19, i8** %8, align 8
  %20 = load i8*, i8** %8, align 8
  %21 = getelementptr inbounds i8, i8* %20, i64 0
  %22 = load i8, i8* %21, align 1
  %23 = sext i8 %22 to i32
  %24 = icmp ne i32 %23, 45
  br i1 %24, label %25, label %26

25:                                               ; preds = %15
  br label %286

26:                                               ; preds = %15
  %27 = load i8*, i8** %8, align 8
  %28 = call i32 @strcmp(i8* %27, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %34

30:                                               ; preds = %26
  %31 = load i8*, i8** %8, align 8
  %32 = call i32 @strcmp(i8* %31, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0))
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %35, label %34

34:                                               ; preds = %30, %26
  br label %286

35:                                               ; preds = %30
  %36 = load i8*, i8** %8, align 8
  %37 = load i32, i32* @CMD_EXEC_PATH, align 4
  %38 = call i32 @prefixcmp(i8* %36, i32 %37)
  %39 = icmp ne i32 %38, 0
  br i1 %39, label %59, label %40

40:                                               ; preds = %35
  %41 = load i32, i32* @CMD_EXEC_PATH, align 4
  %42 = call i32 @strlen(i32 %41)
  %43 = load i8*, i8** %8, align 8
  %44 = sext i32 %42 to i64
  %45 = getelementptr inbounds i8, i8* %43, i64 %44
  store i8* %45, i8** %8, align 8
  %46 = load i8*, i8** %8, align 8
  %47 = load i8, i8* %46, align 1
  %48 = sext i8 %47 to i32
  %49 = icmp eq i32 %48, 61
  br i1 %49, label %50, label %54

50:                                               ; preds = %40
  %51 = load i8*, i8** %8, align 8
  %52 = getelementptr inbounds i8, i8* %51, i64 1
  %53 = call i32 @perf_set_argv_exec_path(i8* %52)
  br label %58

54:                                               ; preds = %40
  %55 = call i32 (...) @perf_exec_path()
  %56 = call i32 @puts(i32 %55)
  %57 = call i32 @exit(i32 0) #3
  unreachable

58:                                               ; preds = %50
  br label %277

59:                                               ; preds = %35
  %60 = load i8*, i8** %8, align 8
  %61 = call i32 @strcmp(i8* %60, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0))
  %62 = icmp ne i32 %61, 0
  br i1 %62, label %68, label %63

63:                                               ; preds = %59
  %64 = load i32, i32* @PERF_HTML_PATH, align 4
  %65 = call i32 @system_path(i32 %64)
  %66 = call i32 @puts(i32 %65)
  %67 = call i32 @exit(i32 0) #3
  unreachable

68:                                               ; preds = %59
  %69 = load i8*, i8** %8, align 8
  %70 = call i32 @strcmp(i8* %69, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.3, i64 0, i64 0))
  %71 = icmp ne i32 %70, 0
  br i1 %71, label %72, label %76

72:                                               ; preds = %68
  %73 = load i8*, i8** %8, align 8
  %74 = call i32 @strcmp(i8* %73, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.4, i64 0, i64 0))
  %75 = icmp ne i32 %74, 0
  br i1 %75, label %77, label %76

76:                                               ; preds = %72, %68
  store i32 1, i32* @use_pager, align 4
  br label %275

77:                                               ; preds = %72
  %78 = load i8*, i8** %8, align 8
  %79 = call i32 @strcmp(i8* %78, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.5, i64 0, i64 0))
  %80 = icmp ne i32 %79, 0
  br i1 %80, label %87, label %81

81:                                               ; preds = %77
  store i32 0, i32* @use_pager, align 4
  %82 = load i32*, i32** %6, align 8
  %83 = icmp ne i32* %82, null
  br i1 %83, label %84, label %86

84:                                               ; preds = %81
  %85 = load i32*, i32** %6, align 8
  store i32 1, i32* %85, align 4
  br label %86

86:                                               ; preds = %84, %81
  br label %274

87:                                               ; preds = %77
  %88 = load i8*, i8** %8, align 8
  %89 = call i32 @strcmp(i8* %88, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.6, i64 0, i64 0))
  %90 = icmp ne i32 %89, 0
  br i1 %90, label %120, label %91

91:                                               ; preds = %87
  %92 = load i32*, i32** %5, align 8
  %93 = load i32, i32* %92, align 4
  %94 = icmp slt i32 %93, 2
  br i1 %94, label %95, label %100

95:                                               ; preds = %91
  %96 = load i32, i32* @stderr, align 4
  %97 = call i32 (i32, i8*, ...) @fprintf(i32 %96, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.7, i64 0, i64 0))
  %98 = load i32, i32* @perf_usage_string, align 4
  %99 = call i32 @usage(i32 %98)
  br label %100

100:                                              ; preds = %95, %91
  %101 = load i32, i32* @PERF_DIR_ENVIRONMENT, align 4
  %102 = load i8***, i8**** %4, align 8
  %103 = load i8**, i8*** %102, align 8
  %104 = getelementptr inbounds i8*, i8** %103, i64 1
  %105 = load i8*, i8** %104, align 8
  %106 = call i32 @setenv(i32 %101, i8* %105, i32 1)
  %107 = load i32*, i32** %6, align 8
  %108 = icmp ne i32* %107, null
  br i1 %108, label %109, label %111

109:                                              ; preds = %100
  %110 = load i32*, i32** %6, align 8
  store i32 1, i32* %110, align 4
  br label %111

111:                                              ; preds = %109, %100
  %112 = load i8***, i8**** %4, align 8
  %113 = load i8**, i8*** %112, align 8
  %114 = getelementptr inbounds i8*, i8** %113, i32 1
  store i8** %114, i8*** %112, align 8
  %115 = load i32*, i32** %5, align 8
  %116 = load i32, i32* %115, align 4
  %117 = add nsw i32 %116, -1
  store i32 %117, i32* %115, align 4
  %118 = load i32, i32* %7, align 4
  %119 = add nsw i32 %118, 1
  store i32 %119, i32* %7, align 4
  br label %273

120:                                              ; preds = %87
  %121 = load i8*, i8** %8, align 8
  %122 = load i32, i32* @CMD_PERF_DIR, align 4
  %123 = call i32 @prefixcmp(i8* %121, i32 %122)
  %124 = icmp ne i32 %123, 0
  br i1 %124, label %138, label %125

125:                                              ; preds = %120
  %126 = load i32, i32* @PERF_DIR_ENVIRONMENT, align 4
  %127 = load i8*, i8** %8, align 8
  %128 = load i32, i32* @CMD_PERF_DIR, align 4
  %129 = call i32 @strlen(i32 %128)
  %130 = sext i32 %129 to i64
  %131 = getelementptr inbounds i8, i8* %127, i64 %130
  %132 = call i32 @setenv(i32 %126, i8* %131, i32 1)
  %133 = load i32*, i32** %6, align 8
  %134 = icmp ne i32* %133, null
  br i1 %134, label %135, label %137

135:                                              ; preds = %125
  %136 = load i32*, i32** %6, align 8
  store i32 1, i32* %136, align 4
  br label %137

137:                                              ; preds = %135, %125
  br label %272

138:                                              ; preds = %120
  %139 = load i8*, i8** %8, align 8
  %140 = call i32 @strcmp(i8* %139, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.8, i64 0, i64 0))
  %141 = icmp ne i32 %140, 0
  br i1 %141, label %169, label %142

142:                                              ; preds = %138
  %143 = load i32*, i32** %5, align 8
  %144 = load i32, i32* %143, align 4
  %145 = icmp slt i32 %144, 2
  br i1 %145, label %146, label %151

146:                                              ; preds = %142
  %147 = load i32, i32* @stderr, align 4
  %148 = call i32 (i32, i8*, ...) @fprintf(i32 %147, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str.9, i64 0, i64 0))
  %149 = load i32, i32* @perf_usage_string, align 4
  %150 = call i32 @usage(i32 %149)
  br label %151

151:                                              ; preds = %146, %142
  %152 = load i32, i32* @PERF_WORK_TREE_ENVIRONMENT, align 4
  %153 = load i8***, i8**** %4, align 8
  %154 = load i8**, i8*** %153, align 8
  %155 = getelementptr inbounds i8*, i8** %154, i64 1
  %156 = load i8*, i8** %155, align 8
  %157 = call i32 @setenv(i32 %152, i8* %156, i32 1)
  %158 = load i32*, i32** %6, align 8
  %159 = icmp ne i32* %158, null
  br i1 %159, label %160, label %162

160:                                              ; preds = %151
  %161 = load i32*, i32** %6, align 8
  store i32 1, i32* %161, align 4
  br label %162

162:                                              ; preds = %160, %151
  %163 = load i8***, i8**** %4, align 8
  %164 = load i8**, i8*** %163, align 8
  %165 = getelementptr inbounds i8*, i8** %164, i32 1
  store i8** %165, i8*** %163, align 8
  %166 = load i32*, i32** %5, align 8
  %167 = load i32, i32* %166, align 4
  %168 = add nsw i32 %167, -1
  store i32 %168, i32* %166, align 4
  br label %271

169:                                              ; preds = %138
  %170 = load i8*, i8** %8, align 8
  %171 = load i32, i32* @CMD_WORK_TREE, align 4
  %172 = call i32 @prefixcmp(i8* %170, i32 %171)
  %173 = icmp ne i32 %172, 0
  br i1 %173, label %187, label %174

174:                                              ; preds = %169
  %175 = load i32, i32* @PERF_WORK_TREE_ENVIRONMENT, align 4
  %176 = load i8*, i8** %8, align 8
  %177 = load i32, i32* @CMD_WORK_TREE, align 4
  %178 = call i32 @strlen(i32 %177)
  %179 = sext i32 %178 to i64
  %180 = getelementptr inbounds i8, i8* %176, i64 %179
  %181 = call i32 @setenv(i32 %175, i8* %180, i32 1)
  %182 = load i32*, i32** %6, align 8
  %183 = icmp ne i32* %182, null
  br i1 %183, label %184, label %186

184:                                              ; preds = %174
  %185 = load i32*, i32** %6, align 8
  store i32 1, i32* %185, align 4
  br label %186

186:                                              ; preds = %184, %174
  br label %270

187:                                              ; preds = %169
  %188 = load i8*, i8** %8, align 8
  %189 = call i32 @strcmp(i8* %188, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.10, i64 0, i64 0))
  %190 = icmp ne i32 %189, 0
  br i1 %190, label %217, label %191

191:                                              ; preds = %187
  %192 = load i32*, i32** %5, align 8
  %193 = load i32, i32* %192, align 4
  %194 = icmp slt i32 %193, 2
  br i1 %194, label %195, label %200

195:                                              ; preds = %191
  %196 = load i32, i32* @stderr, align 4
  %197 = call i32 (i32, i8*, ...) @fprintf(i32 %196, i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.11, i64 0, i64 0))
  %198 = load i32, i32* @perf_usage_string, align 4
  %199 = call i32 @usage(i32 %198)
  br label %200

200:                                              ; preds = %195, %191
  %201 = load i8***, i8**** %4, align 8
  %202 = load i8**, i8*** %201, align 8
  %203 = getelementptr inbounds i8*, i8** %202, i64 1
  %204 = load i8*, i8** %203, align 8
  %205 = call i32 @debugfs_set_path(i8* %204)
  %206 = load i32*, i32** %6, align 8
  %207 = icmp ne i32* %206, null
  br i1 %207, label %208, label %210

208:                                              ; preds = %200
  %209 = load i32*, i32** %6, align 8
  store i32 1, i32* %209, align 4
  br label %210

210:                                              ; preds = %208, %200
  %211 = load i8***, i8**** %4, align 8
  %212 = load i8**, i8*** %211, align 8
  %213 = getelementptr inbounds i8*, i8** %212, i32 1
  store i8** %213, i8*** %211, align 8
  %214 = load i32*, i32** %5, align 8
  %215 = load i32, i32* %214, align 4
  %216 = add nsw i32 %215, -1
  store i32 %216, i32* %214, align 4
  br label %269

217:                                              ; preds = %187
  %218 = load i8*, i8** %8, align 8
  %219 = load i32, i32* @CMD_DEBUGFS_DIR, align 4
  %220 = call i32 @prefixcmp(i8* %218, i32 %219)
  %221 = icmp ne i32 %220, 0
  br i1 %221, label %237, label %222

222:                                              ; preds = %217
  %223 = load i8*, i8** %8, align 8
  %224 = load i32, i32* @CMD_DEBUGFS_DIR, align 4
  %225 = call i32 @strlen(i32 %224)
  %226 = sext i32 %225 to i64
  %227 = getelementptr inbounds i8, i8* %223, i64 %226
  %228 = call i32 @debugfs_set_path(i8* %227)
  %229 = load i32, i32* @stderr, align 4
  %230 = load i8*, i8** @debugfs_mountpoint, align 8
  %231 = call i32 (i32, i8*, ...) @fprintf(i32 %229, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.12, i64 0, i64 0), i8* %230)
  %232 = load i32*, i32** %6, align 8
  %233 = icmp ne i32* %232, null
  br i1 %233, label %234, label %236

234:                                              ; preds = %222
  %235 = load i32*, i32** %6, align 8
  store i32 1, i32* %235, align 4
  br label %236

236:                                              ; preds = %234, %222
  br label %268

237:                                              ; preds = %217
  %238 = load i8*, i8** %8, align 8
  %239 = call i32 @strcmp(i8* %238, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.13, i64 0, i64 0))
  %240 = icmp ne i32 %239, 0
  br i1 %240, label %261, label %241

241:                                              ; preds = %237
  store i32 0, i32* %9, align 4
  br label %242

242:                                              ; preds = %256, %241
  %243 = load i32, i32* %9, align 4
  %244 = load %struct.cmd_struct*, %struct.cmd_struct** @commands, align 8
  %245 = call i32 @ARRAY_SIZE(%struct.cmd_struct* %244)
  %246 = icmp ult i32 %243, %245
  br i1 %246, label %247, label %259

247:                                              ; preds = %242
  %248 = load %struct.cmd_struct*, %struct.cmd_struct** @commands, align 8
  %249 = load i32, i32* %9, align 4
  %250 = zext i32 %249 to i64
  %251 = getelementptr inbounds %struct.cmd_struct, %struct.cmd_struct* %248, i64 %250
  store %struct.cmd_struct* %251, %struct.cmd_struct** %10, align 8
  %252 = load %struct.cmd_struct*, %struct.cmd_struct** %10, align 8
  %253 = getelementptr inbounds %struct.cmd_struct, %struct.cmd_struct* %252, i32 0, i32 0
  %254 = load i8*, i8** %253, align 8
  %255 = call i32 @printf(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.14, i64 0, i64 0), i8* %254)
  br label %256

256:                                              ; preds = %247
  %257 = load i32, i32* %9, align 4
  %258 = add i32 %257, 1
  store i32 %258, i32* %9, align 4
  br label %242

259:                                              ; preds = %242
  %260 = call i32 @exit(i32 0) #3
  unreachable

261:                                              ; preds = %237
  %262 = load i32, i32* @stderr, align 4
  %263 = load i8*, i8** %8, align 8
  %264 = call i32 (i32, i8*, ...) @fprintf(i32 %262, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.15, i64 0, i64 0), i8* %263)
  %265 = load i32, i32* @perf_usage_string, align 4
  %266 = call i32 @usage(i32 %265)
  br label %267

267:                                              ; preds = %261
  br label %268

268:                                              ; preds = %267, %236
  br label %269

269:                                              ; preds = %268, %210
  br label %270

270:                                              ; preds = %269, %186
  br label %271

271:                                              ; preds = %270, %162
  br label %272

272:                                              ; preds = %271, %137
  br label %273

273:                                              ; preds = %272, %111
  br label %274

274:                                              ; preds = %273, %86
  br label %275

275:                                              ; preds = %274, %76
  br label %276

276:                                              ; preds = %275
  br label %277

277:                                              ; preds = %276, %58
  %278 = load i8***, i8**** %4, align 8
  %279 = load i8**, i8*** %278, align 8
  %280 = getelementptr inbounds i8*, i8** %279, i32 1
  store i8** %280, i8*** %278, align 8
  %281 = load i32*, i32** %5, align 8
  %282 = load i32, i32* %281, align 4
  %283 = add nsw i32 %282, -1
  store i32 %283, i32* %281, align 4
  %284 = load i32, i32* %7, align 4
  %285 = add nsw i32 %284, 1
  store i32 %285, i32* %7, align 4
  br label %11

286:                                              ; preds = %34, %25, %11
  %287 = load i32, i32* %7, align 4
  ret i32 %287
}

declare dso_local i32 @strcmp(i8*, i8*) #1

declare dso_local i32 @prefixcmp(i8*, i32) #1

declare dso_local i32 @strlen(i32) #1

declare dso_local i32 @perf_set_argv_exec_path(i8*) #1

declare dso_local i32 @puts(i32) #1

declare dso_local i32 @perf_exec_path(...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @system_path(i32) #1

declare dso_local i32 @fprintf(i32, i8*, ...) #1

declare dso_local i32 @usage(i32) #1

declare dso_local i32 @setenv(i32, i8*, i32) #1

declare dso_local i32 @debugfs_set_path(i8*) #1

declare dso_local i32 @ARRAY_SIZE(%struct.cmd_struct*) #1

declare dso_local i32 @printf(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
